# rf-analyzer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yml  config.json.example  docker-compose.pi.yml  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
deploy/: 99-rtlsdr.rules  deploy.sh  env.example  install.sh  rf-monitor.logrotate  rf-monitor.service
deploy/profiles/: balanced.env  high-sensitivity.env  wideband.env
docker/: host-prep-rtlsdr.sh
rf_monitor/: __init__.py  analyze.py  cli.py  config.py  core.py  utils.py
tests/: test_cli.py
